[gd_scene load_steps=10 format=3 uid="uid://bfnin3q7ivbx3"]

[ext_resource type="Script" uid="uid://f5qlmoend4np" path="res://src/gameplay/items/item_body.gd" id="1_u8rix"]
[ext_resource type="PackedScene" uid="uid://cu3jjchhevkc" path="res://src/gameplay/items/effects/dropped_item_effect.tscn" id="2_6iaba"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6iaba"]
radius = 12.1655

[sub_resource type="CircleShape2D" id="CircleShape2D_ma1fd"]
radius = 48.0

[sub_resource type="Animation" id="Animation_ma1fd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DroppedItemEffect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -20)]
}

[sub_resource type="Animation" id="Animation_aublv"]
resource_name = "bounce_equips"
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DroppedItemEffect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -16)]
}

[sub_resource type="Animation" id="Animation_jkqsk"]
resource_name = "bounce_gems"
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1.90735e-06), Vector2(0, -20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DroppedItemEffect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 9.53674e-07), Vector2(0, -20)]
}

[sub_resource type="Animation" id="Animation_6iaba"]
resource_name = "bounce_potions"
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, -12), Vector2(3, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DroppedItemEffect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -18)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8iy1o"]
_data = {
&"RESET": SubResource("Animation_ma1fd"),
&"bounce_equips": SubResource("Animation_aublv"),
&"bounce_gems": SubResource("Animation_jkqsk"),
&"bounce_potions": SubResource("Animation_6iaba")
}

[node name="ItemObject" type="RigidBody2D" groups=["items"]]
collision_layer = 64
collision_mask = 2
mass = 0.25
lock_rotation = true
linear_damp = 0.2
angular_velocity = 0.0174533
angular_damp = 0.2
script = ExtResource("1_u8rix")

[node name="DroppedItemEffect" parent="." instance=ExtResource("2_6iaba")]
position = Vector2(0, -20)
scale = Vector2(1.25, 1.25)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(0, -20)
rotation = 0.261799

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_6iaba")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ma1fd")
metadata/_edit_lock_ = true

[node name="ItemAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8iy1o")
}
speed_scale = 0.75

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
